<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SunActivity">

    <TextView
        android:id="@+id/txtWeeks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CDDC39"
        android:text="@string/txtSunStr"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btnSaveStr" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMonFirstPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFirstPeriodStr"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtFirstPeriodSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="教科を入力してください"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMonTwoPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTwoPeriodStr"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtTwoPeriodSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="教科を入力してください"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMonThreePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtThreePeriodStr"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtThreePeriodSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="教科を入力してください"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMonFourPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFourPeriodStr"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtFourPeriodSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="教科を入力してください"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtLessonSun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8BC34A" />

    <Button
        android:id="@+id/btnBackSun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBackStr" />

    <Button
        android:id="@+id/btnAllDeleteSun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAllDeleteStr" />

</LinearLayout>